--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -293,7 +293,7 @@
                       accept="application/pdf"
                       required
                       class="absolute inset-0 w-full h-full opacity-0 cursor-pointer"
-                      onchange="initReader(); htmx.trigger(this.form, 'submit')"
+                      onchange="if(this.files.length > 0){ initReader(); htmx.trigger(this.form, 'submit') }"
                     />
                     <p
                       class="text-xs text-slate-400 group-hover:text-indigo-600 font-medium"
